# Python

./: "Guess the Number"  #sudo su .gitpod.yml  #sudo su README.md  .coveragerc  .deepsource.toml  .flake8  .gitattributes  .gitignore  .gitpod.yml  .lgtm.yml  .pre-commit-config.yaml  .replit  .travis.yml  .whitesource  003  01_hello.py  01knapsack  02_pr_01_poem.py  03_pr_03_moduleusage.py  04_pr_04_list_directory.py  05_variable.py  06_operators.py  07_typecasting.py  08_inputfunction.py  09_add_two_no.py  1.txt  10_remainder.py  11_average.py  123.txt  12_square.py  13_strings.py  14_string_slicing.py  15_string_function.py  16_escape sequence.py  17_name+goodafternoon.py  18_letter_modify.py  19_detect_doublespace.py  1bcad49.txt  2022_new.md  20_replace_doblespace.py  (+628 more)
.circleci/: config.yml
.claude/: settings.local.json
.devcontainer/: Dockerfile  Jdevcontainer.json  Makefile  README.md  devcontainer.json  devnew.py  dockerfile  makefile  post_install
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  hello world  pull_request_template.md  stale.yml
.github /: pull_request_template.md
.travis/: covstring.py
8-Puzzle-Problem-Artificial-Intelligence/: readme.md
A-Star-GUI/: AStarGUI.py  README.md
ADB kivy, kivyMD/: call.py  call_phone.py  main.kv
AWS/: s3_to_dynamodb_lambda.py
A_star_searching_algorithm/: A_star_search.py  README.md
Age_difference/: main.py
Alexa_Project/: alexa.py
Algo/: Binary_search.py  Bubble Sort  Calculate node depth  Find closest value of target in binary search tree  Find nearest pallindrom number of given number  Generate document  Insertion Sort  Tower of Hanoi
ArithmeticAnalysis/: Bisection.py  Intersection.py  NeutonMethod.py  NewtonRaphsonMethod.py  euler_method.py  newton_forward_interpolation.py
Audio/: Audio.py
Audio Book/: Audio-book.py
Automata Theory/: README.md  chomsky_hierarchy.py
Beginner programs/: 01_hello.py  02_pr_01_poem.py  03_pr_03_moduleusage.py  04_pr_04_list_directory.py  05_variable.py  06_operators.py  07_typecasting.py  08_inputfunction.py  09_add_two_no.py  100_other_dunder_methods.py  101_create_3-d_vector_by_2d.py  102_inherit_example.py  103_salary_increment.py  104_printing_complex_number.py  105_printing_vector.py  106_sum_nd_product_2-vectors.py  107_represent_vector.py  108_print_vector_length.py  109_the_perfect_guess.py  10_remainder.py  11_average.py  12_square.py  13_strings.py  14_string_slicing.py  15_string_function.py  16_escape sequence.py  17_name+goodafternoon.py  18_letter_modify.py  19_detect_doublespace.py  20_replace_doblespace.py  21_formatletter.py  22_python_list.py  23_list_slicing.py  24_list_methods.py  25_tuples.py  26_tuple_methods.py  27_store_fruits_list.py  28_marks.py  29_sum_a_list.py  30_dictionary.py  (+78 more)
Biomedical/: README.md  __init__.py  examples.py  mann_whitney_test.py  statistical_visualizations.py  wilcoxon_test.py
BitManipulation/: Different_Bits_Sum_Pairwise.py  InterestingArray.py  Min_xor_value.py  SingleIntegerII.py  SingleNumber.py  StrangeEquality.py  XorQueries.py
Bitmanipulation/: Different_Bits_Sum_Pairwise.py
Brute_Force/: BubbleSort.py  InsertionSort.py  README.md  SelectionSort.py  bubble_sort.py  insertion_sort.py  selection_sort.py
Bubble sort/: BubbleSort.py
CNN/: README.md  learning_cnn.py  requirements.txt
Compiler Design/: LL1_Parser.py
Cryptography/: DSA.py  RSA.py
Cyber/: Keylogger.py
DSA/: DSA.py
Dijkstras_algorithm/: shortest_path.py
Dynamic Programming/: 1) knapsack recursive.py  2) knapsack memoization.py  3) knapsack dp top-down.py  4) Subset Sum.py
Electronics/: Ohms_law.py  ohms_law.py
Email-Scrapper/: Email_Scrapper.py
File_Transfer_Protocol/: ftp_client_server.py  ftp_send_receive.py
Giraffe/: Assignement_16.py  Assignment_23.py  Bot.py  Calculator.py  Changevowel.py  Decrypted  Divisibilty.py  Google_search.py  HELLO WORLD.py  Image_Transpose.py  Maximum_Numeric_Project_5.py  Pallindrome.py  Recursion_fibonacci.py  SmsBomber.py  Snake.py  Sum_Even.py  Voice.py  Voice_Assistant_Mini_Project.PY  anagram.py  crypto_basic.py  dictionary.py  email_automation.py  employee.txt  encrypted  forpractice.py  guessame.py  power.py  practice2  print_2darray.py  pywhatkit_dbs.txt  regular_expression.py  rough.py  sample.py  speech_recogniton.py  time.py  triangle_pattern_code.py  try_except.py  weather.py
Grade/: Grading.py
Graphs/: A*.py  All pair Shortest path.py  AllPairShortestPath.py  ArticulationPoints.py  Bellman-Ford.py  BreadthFirstSearch.py  Breadth_First_Search.py  DFS.py  Deep_First_Search.py  DepthFirstSearch.py  Directed and Undirected (Weighted) Graph.py  DirectedAcyclicGraph.py  Eulerian path and circuit for undirected graph.py  Graph_list.py  Graph_matrix.py  KahnsAlgorithm_long.py  MinimumSpanningTree.py  PrimsAlgorithm.py  SingleSourceShortestPath.py  UnionFindDisjointSet.py  a_star.py  articulation_points.py  astar_viz.py  basic-graphs.py  breadth_first_search.py  dijkstra.py  dijkstra_2.py  floyd_warshall.py  graph.py  graph_list.py  graphs.py  minimum_spanning_tree_kruskal.py  pagerank.py  prim.py  scc_kosaraju.py
Greedy Method/: KnapSack_unittest.py
Group Anagrams/: Luv761901_Answer.py
Hackerrank(Project Euler)/: ProjectEuler1-Multiples-of-3-and-5.py
Half Wave Rectifier/: hwr.py
Hash Passwd Cracker/: HashPassCracker.py  Readme.md
Heap/: kth-largest-element.py
Hierarchical-Clustering-On-MallCustomers-Datasets-master/: Mall_Customers.csv  README.md  hierarchical.py
Https/: oscarg933.github.io
Human_Detection_CV2/: Bash_line_codes.md  Histogram-Gradients_ML.py  Manipulation_of_videoframe .py  README.md  _init_.py  webcam_CV2.py
Image_processing/: Adaptive_thresholding.py  Handling_mouse_event.py  Trackbar_1.py  basic_operations_on_images.py  bitwise_opreations_on_images.py  capture_LiveStream_using_camera.py  changing_height_and_width_of_video.py  connecting_points.py  creating_image.py  detection_of_colors_in_images.py  drawing_geometric_shapes.py  image_read_display.py  output.avi  showing_Date_&_Time_on_a_live_video.py  showing_colour_of_clicked_point.py  (+2 more)
(+6589 files in other folders)
