[build-system]
requires = ["setuptools ~= 65.5", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-algorithms"
description = "All algorithms implemented in Python"
version = "1.0.0"

authors = [
    { name = "Christian Clauss", email = "cclauss@me.com" },
    { name = "Dhruv Manilawala", email = "dhruvmanila@gmail.com" },
    { name = "John Law", email = "johnlaw.po@gmail.com" }
]

dependencies = [
    "beautifulsoup4",
    "fake_useragent",
    "keras",
    "lxml",
    "matplotlib",
    "numpy",
    "opencv-python",
    "pandas",
    "pillow",
    "projectq",
    "qiskit",
    "requests",
    "rich",
    "scikit-fuzzy",
    "sklearn",
    "statsmodels",
    "sympy",
    "tensorflow",
    "texttable",
    "tweepy",
    "xgboost",
    "yulewalker"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov"
]

[tool.setuptools]
packages = [ ]

[tool.pytest.ini_options]
markers = [
    "mat_ops: mark a test as utilizing matrix operations.",
]
addopts = [
    "--durations=10",
    "--doctest-modules",
    "--showlocals",
]


[tool.coverage.report]
omit = [".env/*"]
sort = "Cover"

#[report]
#sort = Cover
#omit =
#    .env/*
#    backtracking/*
